export for clients ready
